Fix header alignment and add icons for project controls

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ li {
 }
 
 #logo h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     align-self: center;
 }
 
@@ -146,7 +146,7 @@ input[type="search"] {
     grid-template-columns: repeat(3, max-content);
     column-gap: 20px;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 #profile-shortcuts p {
@@ -229,6 +229,7 @@ input[type="search"] {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
+    justify-items: end;
 }
 
 button {
@@ -236,6 +237,7 @@ button {
     color: white;
     font: inherit;
     font-weight: bold;
+    font-size: 1.5rem;
     width: 8vw;
     height: 35px;
     border-radius: 20px;
@@ -273,16 +275,44 @@ button:hover {
     grid-column: 1 / 3;
     align-self: end;
     font-size: 1.8rem;
+}
 
+.section-title {
+    margin-left: 2rem;
 }
 
 .project {
-    border-left: 15px solid #FFBC42;
+    border-left: 10px solid #FFBC42;
     background-color: white;
     color: black;
     border-radius: 10px;
-    width: 100%;
-    height: 100%;
+    width: 380px;
+    height: 200px;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    padding: 15px;
+    align-self: center;
+    justify-self: center;
+}
+
+.project-text {
+    grid-row: 1 / 2;
+    font-size: 1.2rem;
+}
+
+.project-text h4 {
+    font-size: 1.6rem;
+}
+
+.project-text h4:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.card-icons {
+    grid-row: 2 / 3;
+    align-self: center;
+    justify-self: end;
 }
 
 .project-control {
